--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Atelier-movil",
+    "name": "AtelierLookSocial",
     "slug": "Atelier-movil",
     "version": "1.0.0",
     "orientation": "portrait",
