--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -35,7 +36,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-heroicons": "^4.0.0",
     "react-native-image-picker": "^8.2.1",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
