--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/auth": "^23.5.0",
+    "@react-native-google-signin/google-signin": "^16.0.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -29,6 +32,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "firebase": "^12.6.0",
     "jwt-decode": "^4.0.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
