--- a/app.json
+++ b/app.json
@@ -1,32 +1,49 @@
 {
   "expo": {
     "name": "AtelierLookSocial",
-    "slug": "Atelier-movil",
+    "slug": "atelier-movil",
+    "owner": "eduardoryt",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/atr.png",
     "scheme": "ateliermovil",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+
     "ios": {
       "supportsTablet": true
     },
+
     "android": {
+      "package": "com.eduardoryt.ateliermovil",
+      "googleServicesFile": "./google-services.json",
+      "permissions": [
+        "CAMERA",
+        "READ_EXTERNAL_STORAGE",
+        "WRITE_EXTERNAL_STORAGE",
+        "VIBRATE",
+        "INTERNET"
+      ],
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
-        "foregroundImage": "./assets/images/android-icon-foreground.png",
-        "backgroundImage": "./assets/images/android-icon-background.png",
-        "monochromeImage": "./assets/images/android-icon-monochrome.png"
+        "foregroundImage": "./assets/atr.png",
+        "backgroundColor": "#FFFFFF"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
-    "web": {
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
+
     "plugins": [
       "expo-router",
+      "@react-native-firebase/app",
+      "@react-native-firebase/auth",
+
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Esta app necesita acceder a tu cámara para tomar fotos."
+        }
+      ],
+
       [
         "expo-splash-screen",
         {
@@ -39,11 +56,28 @@
           }
         }
       ],
+
       "expo-web-browser"
     ],
+    "web": {
+      "output": "static",
+      "favicon": "./assets/atr.png"
+    },
+
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "67653622-0813-43c6-bfd2-1495aef28755"
+      }
+    },
+
+    "cli": {
+      "appVersionSource": "source"
     }
   }
 }
