--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "AtelierLookSocial",
     "slug": "atelier-movil",
-    "owner": "eduardoryt",
+    "owner": "tonidznico",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/atr.png",
+    "icon": "./assets/images/icon.png",
     "scheme": "ateliermovil",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -20,11 +20,15 @@
         "READ_EXTERNAL_STORAGE",
         "WRITE_EXTERNAL_STORAGE",
         "VIBRATE",
-        "INTERNET"
+        "INTERNET",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
       ],
       "adaptiveIcon": {
-        "foregroundImage": "./assets/atr.png",
-        "backgroundColor": "#FFFFFF"
+        "backgroundColor": "#E6F4FE",
+        "foregroundImage": "./assets/images/android-icon-foreground.png",
+        "backgroundImage": "./assets/images/android-icon-background.png",
+        "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
@@ -54,7 +58,7 @@
     ],
     "web": {
       "output": "static",
-      "favicon": "./assets/atr.png"
+      "favicon": "./assets/images/favicon.png"
     },
     "experiments": {
       "typedRoutes": true,
@@ -63,7 +67,7 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": "67653622-0813-43c6-bfd2-1495aef28755"
+        "projectId": "ededfb1f-babb-444d-91c7-f1bb4d88ba75"
       }
     },
     "cli": {
