--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "owner": "tonidznico",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+  "icon": "./assets/atr.png",
     "scheme": "ateliermovil",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -14,7 +14,6 @@
     },
     "android": {
       "package": "com.eduardoryt.ateliermovil",
-      "googleServicesFile": "./google-services.json",
       "permissions": [
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
@@ -35,8 +34,6 @@
     },
     "plugins": [
       "expo-router",
-      "@react-native-firebase/app",
-      "@react-native-firebase/auth",
       [
         "expo-camera",
         {
@@ -56,6 +53,7 @@
         }
       ]
     ],
+
     "web": {
       "output": "static",
       "favicon": "./assets/images/favicon.png"
